syntax = "proto3";

package lycaon;

message UploadRequest {
  //e.g. "amouat/network-utils", "nginx", "my-org/my-team/my-repo"
  string repo_name = 1;
  //Expect some auth stuff as well later
}

message UploadDetails {
  string uuid = 1;
}

message BlobRef {
  string repo_name = 1;
  string uuid = 2;
}

//At the moment this will be a simple file path, but could evolve in future
message WriteLocation {
  string path = 1;
}

service Backend {

  //Note UUID is really just a reference number, doesn't have to be a UUID. Blame Docker.
  //Assigns a "UUID" to a Upload that is then used to track it
  rpc RequestUpload (UploadRequest) returns (UploadDetails) {}

  //Given a UUID, return where to write the upload to
  //For the moment this is just a file path
  rpc GetWriteLocationForBlob (BlobRef) returns (WriteLocation) {}

}
